# edital-rag

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml
app/: pyproject.toml
app/app/: main.py  requirements.txt  utils.py
app/tests/: validation.py
data/: EDITAL2025.txt  evaluation.json  reasoning.json
data/embeddings/2c343a4d-1e95-4340-9225-9a1649bff4c1/: index_metadata.pickle
